# GeoToolbox

./: .gitignore  CMakeLists.txt  Catch.natjmc  Msvc.props.template  MsvcAnalysis.ruleset  Readme.md
include/GeoToolbox/: Asserts.hpp  BoxTreeStatic.hpp  Config.hpp  DescribeStruct.hpp  GeoToolbox.natvis  GeometryTools.hpp  Image.hpp  Iterators.hpp  Profiling.hpp  ShapeFile.hpp  Span.hpp  SpatialTools.hpp  StlExtensions.hpp  TestTools.hpp
patches/: Nanoflann-1.9.0.diff  TidwallDims.diff
patches/boost_1_90_0/: distance_query.hpp  spatial_query.hpp
patches/geos-3.13.0/: TemplateSTRtree.h
src/: Config.cpp  Image.cpp  ShapeFile.cpp
test/: CMakeLists.txt  GeometryTest.cpp  MemoryTracker.cpp  ProfilingTest.cpp  SpanTest.cpp
test/Performance/: AlgLib.hpp  Boost.cpp  Boost.hpp  CMakeLists.txt  Geos.hpp  NanoflannAdapter.hpp  NanoflannAdaptor.hpp  SpatialIndexStd.cpp  SpatialIndexTest.cpp  SpatialIndexWrapper.hpp  Spatialpp.cpp  Spatialpp.hpp  TestTools.cpp  TestTools.hpp  TidwallRtree.hpp
